[gd_scene load_steps=33 format=3 uid="uid://bo8st63f1kach"]

[ext_resource type="Texture2D" uid="uid://cqc4a6uu646d8" path="res://assets/temp.png" id="1_3nxkg"]
[ext_resource type="Script" path="res://scenes/BarScene/BarScene.gd" id="1_m3cd4"]
[ext_resource type="Theme" uid="uid://dim6eyxte87jk" path="res://assets/UI/text.tres" id="3_0d4tm"]
[ext_resource type="Script" path="res://scenes/BarScene/CustomerScripts/CustomersHandler.gd" id="5_3crop"]
[ext_resource type="Texture2D" uid="uid://snhgb7f3ma3d" path="res://assets/carrot.png" id="6_4twbe"]
[ext_resource type="Texture2D" uid="uid://cm5oo7o5lg257" path="res://assets/fullflask.png" id="7_5akrq"]
[ext_resource type="Texture2D" uid="uid://dlee64mq71oh7" path="res://assets/emptyflask.png" id="8_xbueo"]
[ext_resource type="Script" path="res://scenes/GameScene/flask.gd" id="9_dhv0m"]
[ext_resource type="Texture2D" uid="uid://bbv317hqgghip" path="res://assets/ingredients/cheery blossom.png" id="10_f5asl"]
[ext_resource type="Script" path="res://scenes/GameScene/FinishPotion.gd" id="10_iq0v3"]
[ext_resource type="PackedScene" uid="uid://b53c2o4cpq0a6" path="res://prefabs/IngredientEffect.tscn" id="10_l43kd"]
[ext_resource type="Script" path="res://scenes/GameScene/ingredients.gd" id="11_2dbj5"]
[ext_resource type="Texture2D" uid="uid://b521jj80chh75" path="res://assets/ingredients/rosemary.png" id="11_sl734"]
[ext_resource type="Texture2D" uid="uid://bpm85c4v7hbo6" path="res://assets/ingredients/lavender.png" id="12_u5j1l"]
[ext_resource type="Texture2D" uid="uid://ct7l0cidy477h" path="res://assets/ingredients/chemical x.png" id="13_pyte8"]
[ext_resource type="Texture2D" uid="uid://b5gc3l7xp2s5y" path="res://assets/ingredients/eyeofnewt.png" id="14_x0elx"]
[ext_resource type="Texture2D" uid="uid://xu5rdy4dxqdv" path="res://assets/ingredients/feathers.png" id="15_1jv60"]
[ext_resource type="Texture2D" uid="uid://cilvbb4yeoekx" path="res://assets/ingredients/fur.png" id="16_mp0ki"]
[ext_resource type="Texture2D" uid="uid://c65faqnonqoil" path="res://assets/ingredients/horn.png" id="17_duylg"]
[ext_resource type="Texture2D" uid="uid://dh7auv01eip1v" path="res://assets/ingredients/mandrakeroot.png" id="18_m10k1"]
[ext_resource type="Texture2D" uid="uid://c3cox8kwp03g0" path="res://assets/ingredients/nail.png" id="19_ascvp"]
[ext_resource type="Texture2D" uid="uid://ttv6eo6sdj5g" path="res://assets/ingredients/pigstail.png" id="20_fxall"]
[ext_resource type="Texture2D" uid="uid://c3xrs3fi7fhlx" path="res://assets/ingredients/poisonivy.png" id="21_ing05"]
[ext_resource type="Texture2D" uid="uid://f2ilbrlorfwe" path="res://assets/ingredients/ravensclaw.png" id="22_ocvpe"]
[ext_resource type="Texture2D" uid="uid://bdolc3rn28xxg" path="res://assets/ingredients/scales.png" id="23_dqeeb"]
[ext_resource type="Texture2D" uid="uid://bb3ri1r4ha1et" path="res://assets/ingredients/sunflower.png" id="24_emoka"]
[ext_resource type="Texture2D" uid="uid://b1gqma8bnsvuw" path="res://assets/ingredients/tooth.png" id="25_ulh0r"]
[ext_resource type="Texture2D" uid="uid://0w7m1ve747t4" path="res://assets/ingredients/whiskers.png" id="26_m8y47"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jxg2"]

[sub_resource type="Animation" id="Animation_dcpdh"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_qxhbj"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.835, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.835, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j85av"]
_data = {
"RESET": SubResource("Animation_dcpdh"),
"bounce": SubResource("Animation_qxhbj")
}

[node name="BarScene" type="Node2D"]
script = ExtResource("1_m3cd4")
metadata/_edit_horizontal_guides_ = [420.0]

[node name="Background" type="Sprite2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.85098, 0.705882, 0.85098, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 1152.0
offset_bottom = 648.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GoToCauldron" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -185.0
offset_top = -184.0
offset_right = -35.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("1_3nxkg")
texture_pressed = ExtResource("1_3nxkg")
texture_hover = ExtResource("1_3nxkg")

[node name="TextEdit" type="TextEdit" parent="UI/GoToCauldron"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 36.0
text = "Go to cauldron"

[node name="Customers" type="Node2D" parent="."]
script = ExtResource("5_3crop")

[node name="Spawn" type="Node2D" parent="Customers"]
position = Vector2(-220, 363)

[node name="seat1" type="Node2D" parent="Customers"]
position = Vector2(162, 363)

[node name="seat2" type="Node2D" parent="Customers"]
position = Vector2(431, 363)

[node name="seat3" type="Node2D" parent="Customers"]
position = Vector2(759, 363)

[node name="seat4" type="Node2D" parent="Customers"]
position = Vector2(1001, 363)

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(1152, 0)

[node name="tempbg" type="ColorRect" parent="Background2"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.552941, 0.721569, 0.85098, 1)
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 1693.0
offset_top = 280.0
offset_right = 1794.0
offset_bottom = 320.0
text = "GAme Scene "
fit_content = true
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="UI2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1152.0
offset_right = 2304.0
offset_bottom = 648.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="GoToBar" type="TextureButton" parent="UI2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -185.0
offset_top = -184.0
offset_right = -35.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("1_3nxkg")
texture_pressed = ExtResource("1_3nxkg")
texture_hover = ExtResource("1_3nxkg")
metadata/_edit_use_anchors_ = true

[node name="TextEdit" type="TextEdit" parent="UI2/GoToBar"]
layout_mode = 0
offset_right = 129.0
offset_bottom = 38.0
text = "go to bar"
metadata/_edit_use_anchors_ = true

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(350, 125)

[node name="cawwot" type="Sprite2D" parent="Node2D"]
visible = false
texture = ExtResource("6_4twbe")

[node name="Area2D" type="Area2D" parent="Node2D"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
visible = false
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_3jxg2")

[node name="Flask" type="Node2D" parent="."]
position = Vector2(1752, 300)

[node name="FullFlask" type="Sprite2D" parent="Flask"]
texture = ExtResource("7_5akrq")

[node name="TextEdit" type="TextEdit" parent="Flask/FullFlask"]
offset_left = -60.0
offset_top = -64.0
offset_right = 51.0
offset_bottom = -18.0
text = "cauldron"
metadata/_edit_use_anchors_ = true

[node name="EmptyFlask" type="Sprite2D" parent="Flask"]
texture = ExtResource("8_xbueo")
script = ExtResource("9_dhv0m")

[node name="TextEdit" type="TextEdit" parent="Flask/EmptyFlask"]
offset_left = -60.0
offset_top = -64.0
offset_right = 51.0
offset_bottom = -18.0
text = "cauldron"
metadata/_edit_use_anchors_ = true

[node name="Cauldron" type="Sprite2D" parent="."]
visible = false
position = Vector2(1728, 528)
texture = ExtResource("1_3nxkg")

[node name="TextEdit" type="TextEdit" parent="Cauldron"]
offset_left = -60.0
offset_top = -64.0
offset_right = 51.0
offset_bottom = -18.0
text = "cauldron"
metadata/_edit_use_anchors_ = true

[node name="FinishPotion" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1152.0
offset_right = 1152.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_iq0v3")
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="FinishPotion"]
layout_mode = 1
anchors_preset = -1
anchor_right = 2.2
anchor_bottom = 2.2
offset_left = 514.0
offset_top = 474.0
offset_right = 642.0
offset_bottom = 602.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.23858, 0.990161)
texture_normal = ExtResource("1_3nxkg")

[node name="FinishText" type="RichTextLabel" parent="FinishPotion/TextureButton"]
z_index = 10
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -122.0
offset_right = 46.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "BREW"

[node name="igrnedicets" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1152.0
offset_right = 1192.0
offset_bottom = 40.0
script = ExtResource("11_2dbj5")
ingredient_effect_class = ExtResource("10_l43kd")
metadata/_edit_use_anchors_ = true

[node name="cherryBlossoms" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.15
anchor_top = 1.025
anchor_right = 1.15
anchor_bottom = 1.025
offset_right = 128.0
offset_bottom = 128.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("10_f5asl")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/cherryBlossoms"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="rosemary" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.65
anchor_top = -1.025
anchor_right = -0.65
anchor_bottom = -1.025
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("11_sl734")
texture_pressed = ExtResource("11_sl734")
texture_hover = ExtResource("11_sl734")
texture_disabled = ExtResource("11_sl734")
texture_focused = ExtResource("11_sl734")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/rosemary"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="lavender" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.55
anchor_top = -1.025
anchor_right = 2.55
anchor_bottom = -1.025
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("12_u5j1l")
texture_pressed = ExtResource("12_u5j1l")
texture_hover = ExtResource("12_u5j1l")
texture_disabled = ExtResource("12_u5j1l")
texture_focused = ExtResource("12_u5j1l")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/lavender"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="chemicalX" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 7.9
anchor_top = -1.05
anchor_right = 7.9
anchor_bottom = -1.05
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("13_pyte8")
texture_pressed = ExtResource("13_pyte8")
texture_hover = ExtResource("13_pyte8")
texture_disabled = ExtResource("13_pyte8")
texture_focused = ExtResource("13_pyte8")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/chemicalX"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="eyeOfNewt" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 19.6
anchor_top = 5.375
anchor_right = 19.6
anchor_bottom = 5.375
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("14_x0elx")
texture_pressed = ExtResource("14_x0elx")
texture_hover = ExtResource("14_x0elx")
texture_disabled = ExtResource("14_x0elx")
texture_focused = ExtResource("14_x0elx")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/eyeOfNewt"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="feathers" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 16.4
anchor_top = 5.375
anchor_right = 16.4
anchor_bottom = 5.375
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("15_1jv60")
texture_pressed = ExtResource("15_1jv60")
texture_hover = ExtResource("15_1jv60")
texture_disabled = ExtResource("15_1jv60")
texture_focused = ExtResource("15_1jv60")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/feathers"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="fur" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.65
anchor_top = 5.375
anchor_right = -0.65
anchor_bottom = 5.375
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("16_mp0ki")
texture_pressed = ExtResource("16_mp0ki")
texture_hover = ExtResource("16_mp0ki")
texture_disabled = ExtResource("16_mp0ki")
texture_focused = ExtResource("16_mp0ki")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/fur"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="horns" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.85
anchor_top = 5.375
anchor_right = -3.85
anchor_bottom = 5.375
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("17_duylg")
texture_pressed = ExtResource("17_duylg")
texture_hover = ExtResource("17_duylg")
texture_disabled = ExtResource("17_duylg")
texture_focused = ExtResource("17_duylg")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/horns"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="mandrakeRoot" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 19.6
anchor_top = 2.175
anchor_right = 19.6
anchor_bottom = 2.175
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("18_m10k1")
texture_pressed = ExtResource("18_m10k1")
texture_hover = ExtResource("18_m10k1")
texture_disabled = ExtResource("18_m10k1")
texture_focused = ExtResource("18_m10k1")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/mandrakeRoot"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="nails" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 19.6
anchor_top = -1.025
anchor_right = 19.6
anchor_bottom = -1.025
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("19_ascvp")
texture_pressed = ExtResource("19_ascvp")
texture_hover = ExtResource("19_ascvp")
texture_disabled = ExtResource("19_ascvp")
texture_focused = ExtResource("19_ascvp")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/nails"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="pigsTail" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 16.4
anchor_top = 2.175
anchor_right = 16.4
anchor_bottom = 2.175
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("20_fxall")
texture_pressed = ExtResource("20_fxall")
texture_hover = ExtResource("20_fxall")
texture_disabled = ExtResource("20_fxall")
texture_focused = ExtResource("20_fxall")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/pigsTail"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="poisonIvy" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 13.2
anchor_top = 2.175
anchor_right = 13.2
anchor_bottom = 2.175
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("21_ing05")
texture_pressed = ExtResource("21_ing05")
texture_hover = ExtResource("21_ing05")
texture_disabled = ExtResource("21_ing05")
texture_focused = ExtResource("21_ing05")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/poisonIvy"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="ravensClaw" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.55
anchor_top = 2.175
anchor_right = 2.55
anchor_bottom = 2.175
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("22_ocvpe")
texture_pressed = ExtResource("22_ocvpe")
texture_hover = ExtResource("22_ocvpe")
texture_disabled = ExtResource("22_ocvpe")
texture_focused = ExtResource("22_ocvpe")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/ravensClaw"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="scales" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.65
anchor_top = 2.175
anchor_right = -0.65
anchor_bottom = 2.175
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("23_dqeeb")
texture_pressed = ExtResource("23_dqeeb")
texture_hover = ExtResource("23_dqeeb")
texture_disabled = ExtResource("23_dqeeb")
texture_focused = ExtResource("23_dqeeb")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/scales"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="sunflowers" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.85
anchor_top = 2.175
anchor_right = -3.85
anchor_bottom = 2.175
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("24_emoka")
texture_pressed = ExtResource("24_emoka")
texture_hover = ExtResource("24_emoka")
texture_disabled = ExtResource("24_emoka")
texture_focused = ExtResource("24_emoka")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/sunflowers"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="tooth" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 16.4
anchor_top = -1.025
anchor_right = 16.4
anchor_bottom = -1.025
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("25_ulh0r")
texture_pressed = ExtResource("25_ulh0r")
texture_hover = ExtResource("25_ulh0r")
texture_disabled = ExtResource("25_ulh0r")
texture_focused = ExtResource("25_ulh0r")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/tooth"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="whiskers" type="TextureButton" parent="igrnedicets"]
layout_mode = 1
anchors_preset = -1
anchor_left = 13.2
anchor_top = -1.025
anchor_right = 13.2
anchor_bottom = -1.025
offset_left = 200.0
offset_top = 82.0
offset_right = 328.0
offset_bottom = 210.0
pivot_offset = Vector2(64, 64)
toggle_mode = true
texture_normal = ExtResource("26_m8y47")
texture_pressed = ExtResource("26_m8y47")
texture_hover = ExtResource("26_m8y47")
texture_disabled = ExtResource("26_m8y47")
texture_focused = ExtResource("26_m8y47")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="igrnedicets/whiskers"]
libraries = {
"": SubResource("AnimationLibrary_j85av")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Clock" type="RichTextLabel" parent="Camera2D"]
offset_left = 32.0
offset_top = 34.0
offset_right = 144.0
offset_bottom = 75.0
theme = ExtResource("3_0d4tm")
theme_override_font_sizes/normal_font_size = 25
text = "10:30"

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="button_up" from="UI/GoToCauldron" to="." method="_on_go_to_cauldron_button_up"]
[connection signal="pressed" from="UI2/GoToBar" to="." method="_on_go_to_bar_pressed"]
[connection signal="body_entered" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="FinishPotion/TextureButton" to="FinishPotion" method="_on_texture_button_pressed"]
[connection signal="pressed" from="igrnedicets/cherryBlossoms" to="igrnedicets" method="_on_cherry_blossoms_pressed"]
[connection signal="pressed" from="igrnedicets/rosemary" to="igrnedicets" method="_on_rosemary_pressed"]
[connection signal="pressed" from="igrnedicets/lavender" to="igrnedicets" method="_on_lavender_pressed"]
[connection signal="pressed" from="igrnedicets/chemicalX" to="igrnedicets" method="_on_chemicalX_pressed"]
[connection signal="pressed" from="igrnedicets/eyeOfNewt" to="igrnedicets" method="_on_eyeOfNewt_pressed"]
[connection signal="pressed" from="igrnedicets/feathers" to="igrnedicets" method="_on_feathers_pressed"]
[connection signal="pressed" from="igrnedicets/fur" to="igrnedicets" method="_on_fur_pressed"]
[connection signal="pressed" from="igrnedicets/horns" to="igrnedicets" method="_on_horns_pressed"]
[connection signal="pressed" from="igrnedicets/mandrakeRoot" to="igrnedicets" method="_on_mandrakeRoot_pressed"]
[connection signal="pressed" from="igrnedicets/nails" to="igrnedicets" method="_on_nails_pressed"]
[connection signal="pressed" from="igrnedicets/pigsTail" to="igrnedicets" method="_on_pigsTail_pressed"]
[connection signal="pressed" from="igrnedicets/poisonIvy" to="igrnedicets" method="_on_poisonIvy_pressed"]
[connection signal="pressed" from="igrnedicets/ravensClaw" to="igrnedicets" method="_on_ravensClaw_pressed"]
[connection signal="pressed" from="igrnedicets/scales" to="igrnedicets" method="_on_scales_pressed"]
[connection signal="pressed" from="igrnedicets/sunflowers" to="igrnedicets" method="_on_sunflowers_pressed"]
[connection signal="pressed" from="igrnedicets/tooth" to="igrnedicets" method="_on_tooth_pressed"]
[connection signal="pressed" from="igrnedicets/whiskers" to="igrnedicets" method="_on_whiskers_pressed"]
[connection signal="timeout" from="Timer" to="Customers" method="_on_timer_timeout"]
